Генетический алгоритм работает. Требуется тщательная перепроверка каждого модуля системы обсчета!